force-app/main/default/objects/Account/fields/Has_unpaid_invoices__c.field-meta.xml
<CustomField>
    <fullName>Has_unpaid_invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has unpaid invoices</label>
    <type>Checkbox</type>
</CustomField>