force-app/main/default/objects/Account/fields/Unpaid_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Invoice_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unpaid Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>