force-app/main/default/objects/Account/fields/Unpaid_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Invoice_Count__c</fullName>
    <label>Unpaid Invoice Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>