force-app/main/default/objects/Account/listViews/All_accounts.listView-meta.xml
<ListView>
    <fullName>All_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Unpaid_Invoice_Amount__c</columns>
    <columns>Unpaid_Invoice_Count__c</columns>
    <columns>Has_unpaid_invoices__c</columns>
    <filterScope>Everything</filterScope>
    <label>All accounts</label>
</ListView>